[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/floor_zone_adapter.gd" id="1"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(800, 6)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(800, 54)

[node name="FloorZone" type="Node2D"]
script = ExtResource("1")

[node name="SurfaceBody" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SurfaceBody"]
shape = SubResource("1")

[node name="DropArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropArea"]
shape = SubResource("2")

[node name="ItemsRoot" type="Node2D" parent="DropArea"]

[node name="SurfaceRef" type="Node2D" parent="."]
